--- a/assets/sass/3-component/_chat.sass
+++ b/assets/sass/3-component/_chat.sass
@@ -350,3 +350,78 @@
 			display: table-cell
 			vertical-align: middle
 			cursor: pointer
+
+// chat comments 
+.chat-comments-wrapper
+	width: 100%
+	float: left
+	.chat-comments-head
+		width: 100%
+		float: left
+		background: $secondary-text
+		height: 40px
+		display: flex
+		align-items: center
+		padding: 0 30px
+		justify-content: space-between	
+		h4
+			font-size: $font-m
+			margin: 0px
+			color: $white
+		.option
+			width: auto
+			float: right
+			height: 30px
+			img
+				width: 30px
+				float: right
+				margin-left: 15px
+				@include border-radius(50%)
+	.chat-comments-content
+		width: 100%
+		float: left
+		padding: 30px
+		background: $white
+		.comment-box
+			width: 100%
+			float: left
+			@include border-radius(4px)
+			border: 1px solid $border
+			padding: 10px
+
+
+.appreciation-wrapper
+	width: auto
+	max-width: 150px
+	float: right
+	text-align: center
+	h3
+		margin-top: 0px
+	.appreciation-box
+		width: 120px
+		height: 120px
+		display: inline-block
+		position: relative
+		background: url(../img/appreciation.png) no-repeat center center
+		background-size: contain
+		font-size: $font-s
+		font-weight: $font-bold
+		.red-box
+			width: 30px
+			height: 30px
+			display: inline-flex
+			align-items: center
+			justify-content: center
+			position: absolute
+			top: 50%
+			left: 50%
+			transform: translate(-50%, -50%)
+			@include border-radius(50%)
+			background: $danger
+			color: $white
+		span
+			position: absolute
+			top: calc(50% + 17px)
+			color: $white
+			left: 50%
+			transform: translateX(-50%)
