--- a/assets/sass/3-component/_sidebar-list.sass
+++ b/assets/sass/3-component/_sidebar-list.sass
@@ -181,7 +181,7 @@ ul.simple-list
 .right-no-project
     width: 100%
     float: left
-    min-height: calc(100vh - 204px)
+    min-height: 60vh
     // min-height: 430px
     position: relative
     .empty-msg
