modal issue fixed.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11989,6 +11989,11 @@ i.color-btn {
 
 .authmodal .modal-dialog {
   width: 100%;
+  min-height: auto;
+}
+
+.search-preview-modal .modal-dialog {
+  max-width: 1200px;
 }
 
 @media (max-width: 768px) {
