--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12685,7 +12685,7 @@ ul.simple-list li:last-of-type {
 .right-no-project {
   width: 100%;
   float: left;
-  min-height: 60vh;
+  min-height: 400px;
   position: relative;
 }
 .right-no-project .empty-msg {
