--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11993,7 +11993,7 @@ i.color-btn {
 }
 
 .search-preview-modal .modal-dialog {
-  max-width: 1200px;
+  max-width: 800px;
 }
 
 @media (max-width: 768px) {
@@ -12009,6 +12009,7 @@ i.color-btn {
 .search-list-modal {
   width: 100%;
   float: left;
+  margin-top: 25px;
 }
 .search-list-modal .description {
   color: #5B616A;
@@ -12018,7 +12019,7 @@ i.color-btn {
   width: auto;
   float: left;
   display: flex;
-  align-items: flex-start;
+  align-items: center;
 }
 .search-list-modal .price-box .per-price {
   width: 80px;
@@ -12046,9 +12047,14 @@ i.color-btn {
 .search-list-modal .contentr {
   font-size: 36px;
   color: #00C4E8;
+  width: 100%;
+  height: 40px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
 }
 .search-list-modal .contentr img {
-  height: 36px;
+  height: 30px;
 }
 
 /* Confrm popup */
@@ -13537,9 +13543,8 @@ ul.simple-list li:last-of-type {
 .custom-slider .thumbslider {
   width: 100%;
   float: left;
-  background: #fff;
-  padding: 0px;
-  margin-top: 10px;
+  background: #dfe4e8;
+  padding: 15px 10px;
 }
 .custom-slider .thumbslider .slick-arrow {
   z-index: 999;
@@ -13547,13 +13552,13 @@ ul.simple-list li:last-of-type {
 .custom-slider .thumbslider .slick-slider {
   width: 100%;
   float: left;
-  margin-bottom: 10px;
 }
-.custom-slider .thumbslider .thumbholder {
-  padding: 0 5px 0 0;
+.custom-slider .thumbslider .slick-list {
+  height: 75px;
 }
 .custom-slider .thumbslider .thumbholder .slidee {
   height: 75px;
+  margin: 0 5px;
   border-radius: 5px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -13561,8 +13566,11 @@ ul.simple-list li:last-of-type {
   background-size: cover;
   background-position: center center;
 }
-.custom-slider .thumbslider .thumbholder:first-of-type, .custom-slider .thumbslider .thumbholder:last-of-type {
+.custom-slider .thumbslider .thumbholder:first-of-type {
   padding-left: 0px;
+}
+.custom-slider .thumbslider .thumbholder:last-of-type {
+  padding-right: 0px;
 }
 
 .vp-center .player {
