--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13468,7 +13468,7 @@ ul.simple-list li:last-of-type {
   z-index: 999;
 }
 .slick-slider .slick-arrow.slick-prev {
-  left: 10px !important;
+  left: 20px !important;
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -13486,7 +13486,7 @@ ul.simple-list li:last-of-type {
   font-family: FontAwesome !important;
 }
 .slick-slider .slick-arrow.slick-next {
-  right: 10px !important;
+  right: 20px !important;
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -14633,6 +14633,9 @@ input:checked + .slider:before {
 .container-top .container-left .slick-slider .slick-list .slick-track {
   color: #5B616A;
 }
+.container-top .container-left .slick-slider .slick-list .slick-track .slick-slide {
+  width: 100%;
+}
 .container-top .container-left .slick-slider .slick-list .slick-track .slick-slide .imgcontainer {
   width: 100%;
   height: 365px;
@@ -14643,14 +14646,17 @@ input:checked + .slider:before {
   background-size: cover;
   background-position: center center;
 }
+.container-top .container-left .slick-slider .slick-list .slick-track .slick-slide .player {
+  max-width: 100%;
+}
 .container-top .container-left .slick-slider .slick-arrow {
   z-index: 999;
 }
 .container-top .container-left .slick-slider .slick-arrow.slick-prev {
-  left: 0px !important;
+  left: 10px !important;
 }
 .container-top .container-left .slick-slider .slick-arrow.slick-next {
-  right: 0px !important;
+  right: 10px !important;
 }
 .container-top .container-right {
   width: 30%;
